Fix alignment issues

--- a/css/editing.css
+++ b/css/editing.css
@@ -44,11 +44,11 @@
     top: 0.375rem;
     left: -0.4375rem;
     background-color: color-mix(in srgb, var(--bottom-bg-color), #FFFFFF calc(100% / 3));
-    padding: 0.3125rem 0.5rem;
+    padding: 0.375rem 0.5rem 0.3125rem;
     border-radius: 0 0 0.5rem 0.5rem;
     min-width: calc(14 * var(--text-size));
-    box-shadow: 0 0 0.375rem 0.1875rem color-mix(in srgb, var(--shadow-color) 50%, #00000000);
-    clip-path: inset(0px -100rem -100rem -100rem); /* Hack to remove top shadow */
+    box-shadow: 0 0 0.375rem 0.1875rem var(--shadow-color-far);
+    clip-path: inset(0.06rem -100rem -100rem -100rem); /* Hack to remove top shadow */
   }
   .buttonoption {
     font-size: calc(0.92 * var(--text-size));
